--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,42 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/btn_static_fragment"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:onClick="handlerStaticFragment"
-        android:text="Contoh static Fragment"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="24dp"
+        android:background="#ffb142"
+        android:onClick="handleClickStaticFragment"
+        android:text="Contoh Static Fragment"
+        android:textColor="@color/text"
+        app:layout_constraintBottom_toTopOf="@+id/btn_dynamic_fragment"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_dynamic_fragment"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:onClick="handlerDynamicFragment"
-        android:text="Contoh dynamic Fragment"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="#ff793f"
+        android:onClick="handleClickDynamicFragment"
+        android:text="Contoh Dynamic Fragment"
+        android:textColor="@color/text"
+        app:layout_constraintBottom_toTopOf="@+id/btn_tugas_fragment"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_static_fragment" />
 
     <Button
-        android:id="@+id/btn_praktikum_fragment"
-        android:layout_width="0dp"
+        android:id="@+id/btn_tugas_fragment"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Contoh Praktikum Fragment"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="200dp"
+        android:background="#ff5252"
+        android:onClick="handlerClickTugasFragment"
+        android:text="Tugas Fragment"
+        android:textColor="@color/text"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_dynamic_fragment"
-        android:onClick="handlerPraktikumFragment"/>
+        app:layout_constraintTop_toBottomOf="@+id/btn_dynamic_fragment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
