--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
     tools:context=".MainActivity">
 
     <Button
@@ -15,7 +14,7 @@
         android:layout_marginTop="200dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="24dp"
-        android:background="#ffb142"
+        android:background="#00BCD4"
         android:onClick="handleClickStaticFragment"
         android:text="Contoh Static Fragment"
         android:textColor="@color/text"
@@ -31,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:background="#ff793f"
+        android:background="#3F51B5"
         android:onClick="handleClickDynamicFragment"
         android:text="Contoh Dynamic Fragment"
         android:textColor="@color/text"
